--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="paragrapher" style="margin-top: 16px; display: flex;
             justify-content: center;">Novo por aqui? <a class="paragrapher link"href="create-profile.html" alt="Criar uma Conta" style="margin-left: 3px ;"> Crie uma Conta</a></div>
 
-            <a class="paragrapher link"href="dashboard.html" alt="Criar uma Conta" style="margin-left: 3px ;"> Ver Dashboard</a>
+            <a class="paragrapher link" href="dashboard.php" alt="Criar uma Conta" style="margin-left: 3px ;"> Ver Dashboard</a>
         </div>
         </div>
              
